Finished merging new watcher style

--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -138,6 +138,16 @@
 	            <% stage.watchers.forEach(function(watcher) { %>
                       <li class="attendee">
                       <%= watcher.name %>
+				<section class="interact" title="Interact with this Attendee">
+				  <h1>Interact with this Attendee</h1>
+  				<ul>
+  				  <li><a href="#" title="Pass [username] the baton">Pass the baton</a></li> <!-- Shown only when holding the baton, only on coders -->
+  				  <li><a href="#" title="Promote [username] to coder">Promote [username]</a></li> <!-- Shown to room owners, only no attendees -->
+  				  <li><a href="#" title="Demote [username] to attendee">Demote [username</a></li> <!-- Shown only to room owners, only on coders -->
+  				  <li><a href="#" title="Mute [username]">Mute [username]</a></li> <!-- Shown to all coders, only on attendees -->
+  				  <li><a href="#" title="Update Your Name">Update Your Username</a></li> <!-- Shown to anyone that is still using the "Guest" name -->
+  				</ul>
+  		  </section>
                       </li>
                     <% }) %>
                 </ol>
@@ -147,11 +157,11 @@
 				<section class="interact" title="Interact with this Attendee">
 				  <h1>Interact with this Attendee</h1>
   				<ul>
-  				  <li><a href="#" title="Pass [username] the baton">Pass the baton</a></li> <!-- Shown only when holding the baton, only on coders -->
-  				  <li><a href="#" title="Promote [username] to coder">Promote [username]</a></li> <!-- Shown to room owners, only no attendees -->
-  				  <li><a href="#" title="Demote [username] to attendee">Demote [username</a></li> <!-- Shown only to room owners, only on coders -->
-  				  <li><a href="#" title="Mute [username]">Mute [username]</a></li> <!-- Shown to all coders, only on attendees -->
-  				  <li><a href="#" title="Update Your Name">Update Your Username</a></li> <!-- Shown to anyone that is still using the "Guest" name -->
+  				  <li><a href="#" title="Pass [username] the baton">Pass the baton</a></li> 
+  				  <li><a href="#" title="Promote [username] to coder">Promote [username]</a></li> 
+  				  <li><a href="#" title="Demote [username] to attendee">Demote [username</a></li> 
+  				  <li><a href="#" title="Mute [username]">Mute [username]</a></li> 
+  				  <li><a href="#" title="Update Your Name">Update Your Username</a></li> 
   				</ul>
   		  </section>
 			</li>
@@ -161,39 +171,41 @@
 				<section class="interact" title="Interact with this Attendee">
 				  <h1>Interact with this Attendee</h1>
   				<ul>
-  				  <li><a href="#" title="Pass [username] the baton">Pass the baton</a></li> <!-- Shown only when holding the baton, only on coders -->
-  				  <li><a href="#" title="Promote [username] to coder">Promote [username]</a></li> <!-- Shown to room owners, only no attendees -->
-  				  <li><a href="#" title="Demote [username] to attendee">Demote [username</a></li> <!-- Shown only to room owners, only on coders -->
-  				  <li><a href="#" title="Mute [username]">Mute [username]</a></li> <!-- Shown to all coders, only on attendees -->
-  				  <li><a href="#" title="Update Your Name">Update Your Username</a></li> <!-- Shown to anyone that is still using the "Guest" name -->
+  				  <li><a href="#" title="Pass [username] the baton">Pass the baton</a></li> 
+  				  <li><a href="#" title="Promote [username] to coder">Promote [username]</a></li> 
+  				  <li><a href="#" title="Demote [username] to attendee">Demote [username</a></li> 
+  				  <li><a href="#" title="Mute [username]">Mute [username]</a></li> 
+  				  <li><a href="#" title="Update Your Name">Update Your Username</a></li> 
   				</ul>
   		  </section>
 			</li>
 	
 			<li class="attendee coder">
 				Coder
+
 				<section class="interact" title="Interact with this Attendee">
 				  <h1>Interact with this Attendee</h1>
   				<ul>
-  				  <li><a href="#" title="Pass [username] the baton">Pass the baton</a></li> <!-- Shown only when holding the baton, only on coders -->
-  				  <li><a href="#" title="Promote [username] to coder">Promote [username]</a></li> <!-- Shown to room owners, only no attendees -->
-  				  <li><a href="#" title="Demote [username] to attendee">Demote [username</a></li> <!-- Shown only to room owners, only on coders -->
-  				  <li><a href="#" title="Mute [username]">Mute [username]</a></li> <!-- Shown to all coders, only on attendees -->
-  				  <li><a href="#" title="Update Your Name">Update Your Username</a></li> <!-- Shown to anyone that is still using the "Guest" name -->
+  				  <li><a href="#" title="Pass [username] the baton">Pass the baton</a></li> 
+  				  <li><a href="#" title="Promote [username] to coder">Promote [username]</a></li> 
+  				  <li><a href="#" title="Demote [username] to attendee">Demote [username</a></li> 
+  				  <li><a href="#" title="Mute [username]">Mute [username]</a></li> 
+  				  <li><a href="#" title="Update Your Name">Update Your Username</a></li> 
   				</ul>
   		  </section>
 			</li>
 	
 			<li class="attendee coder baton">
 				Baton Holder
+
 				<section class="interact" title="Interact with this Attendee">
 				  <h1>Interact with this Attendee</h1>
   				<ul>
-  				  <li><a href="#" title="Pass [username] the baton">Pass the baton</a></li> <!-- Shown only when holding the baton, only on coders -->
-  				  <li><a href="#" title="Promote [username] to coder">Promote [username]</a></li> <!-- Shown to room owners, only no attendees -->
-  				  <li><a href="#" title="Demote [username] to attendee">Demote [username</a></li> <!-- Shown only to room owners, only on coders -->
-  				  <li><a href="#" title="Mute [username]">Mute [username]</a></li> <!-- Shown to all coders, only on attendees -->
-  				  <li><a href="#" title="Update Your Name">Update Your Username</a></li> <!-- Shown to anyone that is still using the "Guest" name -->
+  				  <li><a href="#" title="Pass [username] the baton">Pass the baton</a></li> 
+  				  <li><a href="#" title="Promote [username] to coder">Promote [username]</a></li> 
+  				  <li><a href="#" title="Demote [username] to attendee">Demote [username</a></li> 
+  				  <li><a href="#" title="Mute [username]">Mute [username]</a></li> 
+  				  <li><a href="#" title="Update Your Name">Update Your Username</a></li> 
   				</ul>
   		  </section>
 			</li>
@@ -203,43 +215,14 @@
 				<section class="interact" title="Interact with this Attendee">
 				  <h1>Interact with this Attendee</h1>
   				<ul>
-  				  <li><a href="#" title="Pass [username] the baton">Pass the baton</a></li> <!-- Shown only when holding the baton, only on coders -->
-  				  <li><a href="#" title="Promote [username] to coder">Promote [username]</a></li> <!-- Shown to room owners, only no attendees -->
-  				  <li><a href="#" title="Demote [username] to attendee">Demote [username</a></li> <!-- Shown only to room owners, only on coders -->
-  				  <li><a href="#" title="Mute [username]">Mute [username]</a></li> <!-- Shown to all coders, only on attendees -->
-  				  <li><a href="#" title="Update Your Name">Update Your Username</a></li> <!-- Shown to anyone that is still using the "Guest" name -->
+  				  <li><a href="#" title="Pass [username] the baton">Pass the baton</a></li> 
+  				  <li><a href="#" title="Promote [username] to coder">Promote [username]</a></li> 
+  				  <li><a href="#" title="Demote [username] to attendee">Demote [username</a></li> 
+  				  <li><a href="#" title="Mute [username]">Mute [username]</a></li> 
+  				  <li><a href="#" title="Update Your Name">Update Your Username</a></li> 
   				</ul>
   		  </section>
 			</li>
-	
-			<li class="attendee">
-				Attendee
-				<section class="interact" title="Interact with this Attendee">
-				  <h1>Interact with this Attendee</h1>
-  				<ul>
-  				  <li><a href="#" title="Pass [username] the baton">Pass the baton</a></li> <!-- Shown only when holding the baton, only on coders -->
-  				  <li><a href="#" title="Promote [username] to coder">Promote [username]</a></li> <!-- Shown to room owners, only no attendees -->
-  				  <li><a href="#" title="Demote [username] to attendee">Demote [username</a></li> <!-- Shown only to room owners, only on coders -->
-  				  <li><a href="#" title="Mute [username]">Mute [username]</a></li> <!-- Shown to all coders, only on attendees -->
-  				  <li><a href="#" title="Update Your Name">Update Your Username</a></li> <!-- Shown to anyone that is still using the "Guest" name -->
-  				</ul>
-  		  </section>
-			</li>
-	
-			<li class="attendee">
-				Attendee
-				<section class="interact" title="Interact with this Attendee">
-				  <h1>Interact with this Attendee</h1>
-  				<ul>
-  				  <li><a href="#" title="Pass [username] the baton">Pass the baton</a></li> <!-- Shown only when holding the baton, only on coders -->
-  				  <li><a href="#" title="Promote [username] to coder">Promote [username]</a></li> <!-- Shown to room owners, only no attendees -->
-  				  <li><a href="#" title="Demote [username] to attendee">Demote [username</a></li> <!-- Shown only to room owners, only on coders -->
-  				  <li><a href="#" title="Mute [username]">Mute [username]</a></li> <!-- Shown to all coders, only on attendees -->
-  				  <li><a href="#" title="Update Your Name">Update Your Username</a></li> <!-- Shown to anyone that is still using the "Guest" name -->
-  				</ul>
-  		  </section>
-			</li>
-	
 		</ol>
                 -->	
 	</section>
