--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -132,7 +132,7 @@
 	
 	<section id="attendees">
 		
-		<h1>Who's Watching<br /> (<span id="watchers-count"><%= stage.watchers.length %></span>)<a href="#">Request The Baton</a></h1>
+		<h1>Who's Watching  <mark>(<span id="watchers-count"><%= stage.watchers.length %></span>)</mark><br /><a href="#">Request The Baton</a></h1>
 		
 		<ol>
 	            <% stage.watchers.forEach(function(watcher) { %>
