--- a/public/_/css/style.css
+++ b/public/_/css/style.css
@@ -325,6 +325,11 @@ aside {
 #attendees {
   overflow: visible;
   margin-bottom: 20px; }
+  #attendees mark {
+    font-size: .9em;
+    color: #4da4a4;
+    font-style: normal;
+    background: transparent; }
   #attendees h1 > a {
     left: -17px;
     margin-bottom: 5px;
