Initialized the Create Room Modal.
Signed-off-by: Mike Gibson <mike@lovehasnologic.com>

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -52,7 +52,8 @@
 </script>
 
   <%- body %>
-    
+
+<article class="modal">    
 </body>
 
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
