--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -53,7 +53,7 @@
 
   <%- body %>
 
-<article class="modal">    
+<section class="jqModal"><article></article><a href="#" class="jqmClose">Close this box</a></section>   
 </body>
 
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
