--- a/public/_/sass/style.scss
+++ b/public/_/sass/style.scss
@@ -346,6 +346,7 @@ width: 100% !important;
 #text-chat {
   overflow: hidden;
   margin-bottom: 10px;
+  padding-bottom: 5px;
 }
 
 #conversation {
@@ -549,20 +550,22 @@ footer {
 /* The Window's CSS z-index value is respected (takes priority). If none is supplied,
 	the Window's z-index value will be set to 3000 by default (via jqModal.js). */
 	
-.modal {
-    display: none;
-    
-    position: fixed;
-    top: 17%;
-    left: 50%;
-    
-    margin-left: -300px;
-    width: 600px;
-    
-    background-color: #EEE;
-    color: #333;
-    border: 1px solid black;
-    padding: 12px;
+.jqModal {
+  display: none;
+  position: fixed;
+  top: 17%;
+  left: 50%;
+  margin-left: -300px;
+  width: 600px;
+  background: url(../img/bg/noise.png) center top repeat, url(../img/logo/stamp.png) 98% 150% no-repeat $white;
+  @include rounded(10px);
+  -webkit-box-shadow: 0 0 20px $black50;
+  .jqmClose {
+    position: relative;
+    left: 20px;
+    top: -15px;
+    z-index: 500;
+  }
 }
 
 .jqmOverlay { background-color: #000; }
@@ -576,9 +579,44 @@ footer {
 /* Fixed posistioning emulation for IE6
      Star selector used to hide definition from browsers other than IE6
      For valid CSS, use a conditional include instead */
-* html .modal {
+* html .jqModal {
      position: absolute;
      top: expression((document.documentElement.scrollTop || document.body.scrollTop) + Math.round(17 * (document.documentElement.offsetHeight || document.body.clientHeight) / 100) + 'px');
+}
+
+/* FORMS */
+
+form[action="/stages"] {
+  
+  max-width: 400px;  
+  padding: 20px;
+  
+  h1 {
+    font-size: 2.8em;
+    color: $turq;
+    text-transform: uppercase;
+    line-height: 1;
+    @include display(900);
+  }
+  
+  label {
+    font-size: 1.4em;
+    color: $dkgray;
+    text-transform: uppercase;
+    display: block;
+    margin: 0 0 5px;
+    @include sans(700);
+  }
+  
+  input[type="text"], select {
+    width: 100%;
+    margin-bottom: 10px;
+  }
+  
+  input[type="submit"] {
+    @include button;
+  }
+  
 }
   
 
