--- a/views/stages/new.ejs
+++ b/views/stages/new.ejs
@@ -1,19 +1,19 @@
 <form action="/stages" method="POST">
-  <div class="field">
-    <label>Name</label>
-    <input type="text" name="stage[name]" />
-  </div>
+  
+  <h1>Create A New Room</h1>
+  
+  <fieldset>
+    <label for="room-name">Room Name</label>
+    <input type="text" name="stage[name]" id="room-name" />
 
-  <div class="field">
-    <label>Language</label>
-    <select name="stage[language]">
+    <label for="language">Language</label>
+    <select name="stage[language]" id="language">
       <option value="JavaScript">JavaScript</option>
       <option value="HTML">HTML</option>
       <option value="CSS">CSS</option>
     </select>
-  </div>
+  <fieldset>
 
-  <div class="submit">
-    <button type="submit">Save</button>
-  </div>
+  <input type="submit" value="Create Your Room">
+
 </form>
