--- a/public/_/css/style.css
+++ b/public/_/css/style.css
@@ -456,8 +456,7 @@ footer {
   .jqModal .jqmClose {
     position: relative;
     left: 20px;
-    top: -15px;
-    z-index: 500; }
+    top: -15px; }
 
 .jqmOverlay {
   background-color: #000; }
